--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Fin URL: <input id="url_fin" type="text" name="url_fin" value=":8080/browserfs.h
     <br>
 </div>
 
-<script src="http://code.jquery.com/jquery.min.js"></script>
+<script src="./jquery.min.js"></script>
 <script>
 
 function addDiv() {
