--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
 
 <iframe id="iframe" width="100%" height="100%" frameborder="0"  src="http://192.168.1.103:8080/browserfs.html"></iframe>
 
-    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <script src="./jquery.min.js"></script>
 <script>
 
   
