cambio de nombres

--- a/admin.html
+++ b/admin.html
@@ -11,7 +11,7 @@ Fin URL: <input id="url_fin" type="text" name="url_fin" value=":8080/browserfs.h
     <button id="url1_button">Ver</button>
     <button id="send1">SEND</button>
     <br>
-    <iframe id="url1_iframe" src="http://192.168.1.103:8080/browserfs.html"></iframe>
+    <iframe id="url1_iframe" src=""></iframe>
     <br>
 </div>
 
